Configuration Of .env

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 docQA\uploads
 env
 docQA\db.sqlite3
+uploads
+db.sqlite3
+C:\Users\seera\Desktop\Q&A\docQA\uploads
+C:\Users\seera\Desktop\Q&A\docQA\db.sqlite3
